[gd_scene load_steps=2 format=1]

[ext_resource path="res://addons/tree-tools/Nodes/SubNodes/Scripts/dialog_line_block.gd" type="Script" id=1]

[node name="vbox_line" type="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 134.0
alignment = 0
script/script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "Script"
}
block_to_collapse_path = NodePath("vbox_block")

[node name="hbox" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 20.0
alignment = 0

[node name="id" type="Label" parent="hbox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 3.0
margin/right = 7.0
margin/bottom = 17.0
text = "x"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option_btn_action" type="OptionButton" parent="hbox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 0.0
margin/right = 71.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "say"
flat = false
align = 0
selected = 0
items = [ "say", null, false, 0, null, "anim", null, false, 1, null, "walkto", null, false, 2, null, "teleport", null, false, 3, null ]

[node name="MarginContainer" type="MarginContainer" parent="hbox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 75.0
margin/top = 0.0
margin/right = 83.0
margin/bottom = 20.0

[node name="btn_hide" type="Button" parent="hbox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 87.0
margin/top = 0.0
margin/right = 109.0
margin/bottom = 20.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "H"
flat = false

[node name="lbl_first_line" type="Label" parent="hbox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 113.0
margin/top = 3.0
margin/right = 113.0
margin/bottom = 17.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="vbox_block" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 24.0
margin/right = 300.0
margin/bottom = 162.0
alignment = 0

[node name="hBoxContainer" type="HBoxContainer" parent="vbox_block"]

rect/min_size = Vector2( 300, 20 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 138.0
alignment = 0

[node name="box_say" type="VBoxContainer" parent="vbox_block/hBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 138.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="vbox_block/hBoxContainer/box_say"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 24.0
alignment = 0

[node name="lbl_actor" type="Label" parent="vbox_block/hBoxContainer/box_say/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 34.0
margin/bottom = 19.0
text = "Actor"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text" type="LineEdit" parent="vbox_block/hBoxContainer/box_say/HBoxContainer"]

rect/min_size = Vector2( 150, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 38.0
margin/top = 0.0
margin/right = 188.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="HBoxContainer2" type="VBoxContainer" parent="vbox_block/hBoxContainer/box_say"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 28.0
margin/right = 300.0
margin/bottom = 138.0
alignment = 0

[node name="lbl_dialog" type="Label" parent="vbox_block/hBoxContainer/box_say/HBoxContainer2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 14.0
text = "Dialog"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="dialog" type="TextEdit" parent="vbox_block/hBoxContainer/box_say/HBoxContainer2"]

rect/min_size = Vector2( 300, 46 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 300.0
margin/bottom = 64.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = true
caret/caret_blink_speed = 0.65

[node name="lbl_animation" type="Label" parent="vbox_block/hBoxContainer/box_say/HBoxContainer2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 68.0
margin/right = 300.0
margin/bottom = 82.0
text = "Animation speech"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="animation" type="LineEdit" parent="vbox_block/hBoxContainer/box_say/HBoxContainer2"]

rect/min_size = Vector2( 0, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 86.0
margin/right = 300.0
margin/bottom = 110.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="box_anim" type="VBoxContainer" parent="vbox_block/hBoxContainer"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 304.0
margin/top = 0.0
margin/right = 574.0
margin/bottom = 138.0
alignment = 0

[node name="HBoxContainer1" type="HBoxContainer" parent="vbox_block/hBoxContainer/box_anim"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 270.0
margin/bottom = 24.0
alignment = 0

[node name="actor_label" type="Label" parent="vbox_block/hBoxContainer/box_anim/HBoxContainer1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 34.0
margin/bottom = 19.0
text = "Actor"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="actor" type="LineEdit" parent="vbox_block/hBoxContainer/box_anim/HBoxContainer1"]

rect/min_size = Vector2( 200, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 38.0
margin/top = 0.0
margin/right = 238.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="HBoxContainer2" type="HBoxContainer" parent="vbox_block/hBoxContainer/box_anim"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 28.0
margin/right = 270.0
margin/bottom = 52.0
alignment = 0

[node name="animation_label" type="Label" parent="vbox_block/hBoxContainer/box_anim/HBoxContainer2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 66.0
margin/bottom = 19.0
text = "Animation"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="animation" type="LineEdit" parent="vbox_block/hBoxContainer/box_anim/HBoxContainer2"]

rect/min_size = Vector2( 200, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 70.0
margin/top = 0.0
margin/right = 270.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="box_walkto" type="VBoxContainer" parent="vbox_block/hBoxContainer"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 304.0
margin/top = 0.0
margin/right = 604.0
margin/bottom = 138.0
alignment = 0

[node name="hbox" type="HBoxContainer" parent="vbox_block/hBoxContainer/box_walkto"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 24.0
alignment = 0

[node name="actor_label" type="Label" parent="vbox_block/hBoxContainer/box_walkto/hbox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 34.0
margin/bottom = 19.0
text = "Actor"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="actor" type="LineEdit" parent="vbox_block/hBoxContainer/box_walkto/hbox"]

rect/min_size = Vector2( 200, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 38.0
margin/top = 0.0
margin/right = 238.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="vbox" type="VBoxContainer" parent="vbox_block/hBoxContainer/box_walkto"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 28.0
margin/right = 300.0
margin/bottom = 70.0
alignment = 0

[node name="Position2D node" type="Label" parent="vbox_block/hBoxContainer/box_walkto/vbox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 14.0
text = "Position2D NodePath"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pos2d_nodepath" type="LineEdit" parent="vbox_block/hBoxContainer/box_walkto/vbox"]

rect/min_size = Vector2( 300, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 300.0
margin/bottom = 42.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="box_teleport" type="VBoxContainer" parent="vbox_block/hBoxContainer"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 310.0
margin/bottom = 52.0
alignment = 0

[node name="hbox" type="HBoxContainer" parent="vbox_block/hBoxContainer/box_teleport"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 310.0
margin/bottom = 24.0
alignment = 0

[node name="actor_label" type="Label" parent="vbox_block/hBoxContainer/box_teleport/hbox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 34.0
margin/bottom = 19.0
text = "Actor"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="actor" type="LineEdit" parent="vbox_block/hBoxContainer/box_teleport/hbox"]

rect/min_size = Vector2( 200, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 38.0
margin/top = 0.0
margin/right = 238.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="hbox1" type="HBoxContainer" parent="vbox_block/hBoxContainer/box_teleport"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 28.0
margin/right = 310.0
margin/bottom = 52.0
alignment = 0

[node name="Position2D node1" type="Label" parent="vbox_block/hBoxContainer/box_teleport/hbox1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 106.0
margin/bottom = 19.0
text = "Position2D node"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pos2d_nodepath1" type="LineEdit" parent="vbox_block/hBoxContainer/box_teleport/hbox1"]

rect/min_size = Vector2( 200, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 110.0
margin/top = 0.0
margin/right = 310.0
margin/bottom = 24.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="HSeparator" type="HSeparator" parent="."]

rect/min_size = Vector2( 300, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 166.0
margin/right = 300.0
margin/bottom = 169.0

[connection signal="item_selected" from="hbox/option_btn_action" to="." method="_on_item_action_selected"]


